--- a/home.html
+++ b/home.html
@@ -4,11 +4,36 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>Love Black Art</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="home.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
-<body style="margin: 0; padding: 0;">
-    
+<body>
+    <header class="navbar">
+        <div class="navbar-container">
+            <div class="section-one-container">
+                <div class="nav-links-container">
+                    <div class='nav-links'>
+                        <a class="active" href="#home">Home</a>
+                        <a href="#about">About</a>
+                        <a href="#contact">Contact</a>
+                        <a href="#blogs">Blogs</a>
+                        <i class="fas fa-search"></i>
+                    </div>
+                </div>
+                <div class="vertical-line"></div>
+                <div class='social-links-container'>
+                    <div class="social-links">
+                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-facebook-f"></i>
+                        <i class="fab fa-youtube"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
 
 </html>
