--- a/home.html
+++ b/home.html
@@ -34,6 +34,45 @@
             </div>
         </div>
     </header>
+    <div class="header-image-container">
+        <div class="header-image"></div>
+    </div>
+    <!--What We Do Section-->
+    <div class="what-we-do-container body-width">
+        <div class='what-we-do-header'>What We Do</div>
+        <div class='what-we-do-body'>
+            <div class="what-we-do-subjects">
+                <div class="wwd-subjects-item">
+                    <div class="wwd-icon">
+                        <i class="fas fa-map-marker-alt"></i>
+                    </div>
+                    <div class="wwd-copy">
+                        <div class="wwd-copy-header">Showcasing</div>
+                        <div class="what-we-do-subjects-text">Lorem ipsum dolor sit amet, consectetur adi.</div>
+                    </div>
+                </div>
+                <div class="wwd-subjects-item">
+                    <div class="wwd-icon">
+                        <i class="fas fa-map-marker-alt"></i>
+                    </div>
+                    <div class="wwd-copy">
+                        <div class="wwd-copy-header">Locating</div>
+                        <div class="what-we-do-subjects-text">Lorem ipsum dolor sit amet, consectetur adi.</div>
+                    </div>
+                </div>
+                <div class="wwd-subjects-item">
+                    <div class="wwd-icon">
+                        <i class="fas fa-map-marker-alt"></i>
+                    </div>
+                    <div class="wwd-copy">
+                        <div class="wwd-copy-header">Inspiring</div>
+                        <div class="what-we-do-subjects-text">Lorem ipsum dolor sit amet, consectetur adi.</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="wwd-line-separator body-width"></div>
 </body>
 
 </html>
