Finished more sections

--- a/home.html
+++ b/home.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <!--Navbar Section-->
     <header class="navbar">
         <div class="navbar-container">
             <div class="section-one-container">
@@ -34,9 +35,14 @@
             </div>
         </div>
     </header>
+    <!--End Navbar Section-->
+
+    <!--Header Section-->
     <div class="header-image-container">
         <div class="header-image"></div>
     </div>
+    <!--End Header Section-->
+
     <!--What We Do Section-->
     <div class="what-we-do-container body-width">
         <div class='what-we-do-header'>What We Do</div>
@@ -44,7 +50,7 @@
             <div class="what-we-do-subjects">
                 <div class="wwd-subjects-item">
                     <div class="wwd-icon">
-                        <i class="fas fa-map-marker-alt"></i>
+                        <i class="far fa-star"></i>
                     </div>
                     <div class="wwd-copy">
                         <div class="wwd-copy-header">Showcasing</div>
@@ -62,7 +68,7 @@
                 </div>
                 <div class="wwd-subjects-item">
                     <div class="wwd-icon">
-                        <i class="fas fa-map-marker-alt"></i>
+                        <i class="fas fa-lightbulb"></i>
                     </div>
                     <div class="wwd-copy">
                         <div class="wwd-copy-header">Inspiring</div>
@@ -73,6 +79,100 @@
         </div>
     </div>
     <div class="wwd-line-separator body-width"></div>
+    <!--End of What We Do-->
+
+    <!--Meet our Founder-->
+    <div class="mof-container">
+        <div class="mof-content-container body-width">
+            <div class="mof-copy-container">
+                <div class="mof-header">
+                    Meet Our Founder
+                </div>
+                <div class="mof-copy">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et
+                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                    reprehenderit in voluptate velit esse.
+                </div>
+                <div class="mof-line-separator-container">
+                    <div class="mof-line-separator"></div>
+                </div>
+                <div class="mof-button-container">
+                    <button class="mof-button">Submit Your Art</button>
+                </div>
+            </div>
+            <div class="founder-image-container">
+                <img src='/assets/images/pexels-teddy-tavan-4890733.jpg' height="476" width="370"></img>
+            </div>
+        </div>
+    </div>
+    <!--End Meet Our Founder-->
+
+    <!--Latest Blog Section-->
+    <div class="latest-blog-container">
+        <div class="blog-headers-container">
+            <div class="blog-mini-header">Fresh from the Blog</div>
+            <div class="blog-header">Latest Blogs</div>
+        </div>
+        <!--Blog 1-->
+        <div class="blog-posts-container body-width">
+            <div class="blog-post-img-container">
+                <img src="assets/images/pexels-olanma-etigweuwa-3867509-resize.jpg" height="300" width="450"></img>
+            </div>
+            <div class="bp-1-copy-container">
+                <div class="bp-date">February 3rd, 2021</div>
+                <div class="bp-copy-header">Featured Artist of the Month: Jon Doe</div>
+                <div class="bp-copy">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim 
+                    veniam, quis nostrud exercitation ullamco labor...
+                </div>
+                <div class="read-more-1">
+                    <a src="#">Read More</a>
+                </div>
+            </div>
+        </div>
+        <!--End Blog 1-->
+
+        <!--Blog 2-->
+        <div class="blog-posts-container body-width">   
+            <div class="bp-1-copy-container">
+                <div class="bp-date">February 3rd, 2021</div>
+                <div class="bp-copy-header">Featured Artist of the Month: Jon Doe</div>
+                <div class="bp-copy">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim 
+                    veniam, quis nostrud exercitation ullamco labor...
+                </div>
+                <div class="read-more-2">
+                    <a src="#">Read More</a>
+                </div>
+            </div>
+            <div class="blog-post-img-container">
+                <img src="assets/images/pexels-dazzle-jam-2710063-resize.jpg" height="300" width="450"></img>
+            </div>
+        </div>
+    </div>
+    <!--End Latest Blog Section-->
+
+    <!--Quotes Section-->
+    <div class="quotes-container">
+        <div class="quotes-copy-container">
+            <div class="quotes-author">
+                Jean-Michael Basquiat
+            </div>
+            <div class="quotes-title">
+                World-Renowned Artist
+            </div>
+            <div class="quotes-quote">
+                I don’t listen to what art critics say. I don’t know anybody who needs a critic to find out what art is.
+            </div>
+            <div class="car-ind-container">
+                <div class="car-ind-1"></div>
+                <div class="car-ind-2"></div>
+                <div class="car-ind-3"></div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
