Compeleted Website Basis

--- a/home.html
+++ b/home.html
@@ -124,7 +124,8 @@
                 <div class="bp-date">February 3rd, 2021</div>
                 <div class="bp-copy-header">Featured Artist of the Month: Jon Doe</div>
                 <div class="bp-copy">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim 
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim
                     veniam, quis nostrud exercitation ullamco labor...
                 </div>
                 <div class="read-more-1">
@@ -135,12 +136,13 @@
         <!--End Blog 1-->
 
         <!--Blog 2-->
-        <div class="blog-posts-container body-width">   
+        <div class="blog-posts-container body-width">
             <div class="bp-1-copy-container">
                 <div class="bp-date">February 3rd, 2021</div>
                 <div class="bp-copy-header">Featured Artist of the Month: Jon Doe</div>
                 <div class="bp-copy">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim 
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim
                     veniam, quis nostrud exercitation ullamco labor...
                 </div>
                 <div class="read-more-2">
@@ -173,6 +175,112 @@
             </div>
         </div>
     </div>
+    <!--End Quotes Section-->
+
+    <!--Contact Us Section-->
+    <div class="contact-section-container body-width">
+        <div class="contact-info-container">
+            <div class="map-container">
+                <img src="assets/images/map-snip.PNG" height="216" width="385"></img>
+            </div>
+            <div class='contact-info'>
+                <div class="contact-info-addy">
+                    P. Sherman, 42 Wallabee Way, Sydney Australia, 2055-45642
+                </div>
+                <div class="contact-line-sep"></div>
+                <div class="contact-email">
+                    theartifactmedia@gmail.com
+                </div>
+                <div class="contact-phone">
+                    +5-555-123-4567
+                </div>
+            </div>
+        </div>
+        <div class="contact-form-container">
+            <div class="contact-info-form-container">
+                <div class="contact-mini-header">
+                    Let's hear from You
+                </div>
+                <div class="contact-header">
+                    Contact Us
+                </div>
+                <div class="contact-form">
+                    <form action="/home.html">
+                        <div class="input-fields">
+                            <input type="text" id="fname" name="firstname" placeholder="First Name">
+                            <input type="text" id="email" name="email" placeholder="Email">
+                            <input type="text" id="phone" name="phone" placeholder="Phone Number">
+
+                        </div>
+                        <textarea id="subject" name="subject" placeholder="Write something.."
+                            style="height:100px"></textarea>
+
+                        <div class="button-container">
+                            <input type="submit" value="Send">
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--End Contact Us Section-->
+
+    <!--Footer Section-->
+    <footer>
+        <div class="footer-content-container body-width">
+            <div class="foot-info">
+                <img src="assets/images/Artifact badge no background.png" height="62px" width="70px;">
+                <div class=foot-info-content>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis 
+                    nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                </div>
+                <div class='social-links-container'>
+                    <div class="social-links">
+                        <i class="fab fa-twitter" style="padding-left: 0;"></i>
+                        <i class="fab fa-facebook-f"></i>
+                        <i class="fab fa-youtube"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="foot-contact">
+                <div class="foot-contact-header">
+                    Contact Us
+                </div>
+                <div class="foot-contact-content">
+                    <div class="foot-phone">
+                        <i class="fas fa-phone-alt"></i>
+                        <div class="foot-phone-content">
+                            +5-555-123-4567
+                        </div>
+                    </div>
+                    <div class="foot-email">
+                        <i class="fas fa-envelope"></i>
+                        <div class="foot-email-content">
+                            theartifactmedia@gmail.com
+                        </div>
+                    </div>
+                    <div class="foot-addy">
+                        <i class="fas fa-map-marker-alt"></i>
+                        <div class="foot-addy-content">
+                            P. Sherman, 42 Wallabee Way, Sydney, Australia, 2055-45642
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-posts">
+                <div class="foot-posts-header">Recent Posts</div>
+                <div class="post-1">Featured Artist of the Month</div>
+                <div class="post-2">For the Love of Black Art</div>
+                <div class="post-3">Art, Mind, Body, Soul</div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <div class="footer-line-sep"></div>
+            <div class="copyright body-width">
+                Copyright 2021 by Artifact Multimedia All rights reserved
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
