--- a/home.html
+++ b/home.html
@@ -45,16 +45,16 @@
 
     <!--What We Do Section-->
     <div class="what-we-do-container body-width">
-        <div class='what-we-do-header'>What We Do</div>
-        <div class='what-we-do-body'>
-            <div class="what-we-do-subjects">
+        <div class='wwd-header'>What We Do</div>
+        <div class='wwd-body'>
+            <div class="wwd-subjects">
                 <div class="wwd-subjects-item">
                     <div class="wwd-icon">
                         <i class="far fa-star"></i>
                     </div>
                     <div class="wwd-copy">
                         <div class="wwd-copy-header">Showcasing</div>
-                        <div class="what-we-do-subjects-text">Lorem ipsum dolor sit amet, consectetur adi.</div>
+                        <div class="wwd-subjects-text">Lorem ipsum dolor sit amet, consectetur adi.</div>
                     </div>
                 </div>
                 <div class="wwd-subjects-item">
@@ -63,7 +63,7 @@
                     </div>
                     <div class="wwd-copy">
                         <div class="wwd-copy-header">Locating</div>
-                        <div class="what-we-do-subjects-text">Lorem ipsum dolor sit amet, consectetur adi.</div>
+                        <div class="wwd-subjects-text">Lorem ipsum dolor sit amet, consectetur adi.</div>
                     </div>
                 </div>
                 <div class="wwd-subjects-item">
@@ -72,7 +72,7 @@
                     </div>
                     <div class="wwd-copy">
                         <div class="wwd-copy-header">Inspiring</div>
-                        <div class="what-we-do-subjects-text">Lorem ipsum dolor sit amet, consectetur adi.</div>
+                        <div class="wwd-subjects-text">Lorem ipsum dolor sit amet, consectetur adi.</div>
                     </div>
                 </div>
             </div>
@@ -153,6 +153,7 @@
                 <img src="assets/images/pexels-dazzle-jam-2710063-resize.jpg" height="300" width="450"></img>
             </div>
         </div>
+        <!--End Blog 2-->
     </div>
     <!--End Latest Blog Section-->
 
@@ -231,8 +232,9 @@
             <div class="foot-info">
                 <img src="assets/images/Artifact badge no background.png" height="62px" width="70px;">
                 <div class=foot-info-content>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis 
-                    nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis
+                    nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                 </div>
                 <div class='social-links-container'>
                     <div class="social-links">
@@ -281,6 +283,7 @@
             </div>
         </div>
     </footer>
+    <!--End Footer Section-->
 </body>
 
 </html>
