Added logo in navbar

--- a/home.html
+++ b/home.html
@@ -14,6 +14,9 @@
     <!--Navbar Section-->
     <header class="navbar">
         <div class="navbar-container">
+            <div class="logo-container">
+                <img src="assets/images/Artifact badge no background.png" height="62px" width="70px;">
+            </div>
             <div class="section-one-container">
                 <div class="nav-links-container">
                     <div class='nav-links'>
