--- a/home.html
+++ b/home.html
@@ -119,7 +119,7 @@
             <div class="blog-header">Latest Blogs</div>
         </div>
         <!--Blog 1-->
-        <div class="blog-posts-container body-width">
+        <div class="bp-1-container body-width">
             <div class="blog-post-img-container">
                 <img src="assets/images/pexels-olanma-etigweuwa-3867509-resize.jpg" height="300" width="450"></img>
             </div>
@@ -139,7 +139,7 @@
         <!--End Blog 1-->
 
         <!--Blog 2-->
-        <div class="blog-posts-container body-width">
+        <div class="bp-2-container body-width">
             <div class="bp-1-copy-container">
                 <div class="bp-date">February 3rd, 2021</div>
                 <div class="bp-copy-header">Featured Artist of the Month: Jon Doe</div>
