Updated image stuff

--- a/home.html
+++ b/home.html
@@ -42,7 +42,9 @@
 
     <!--Header Section-->
     <div class="header-image-container">
-        <div class="header-image"></div>
+        <div>
+            <img class='header-images' src='/assets/images/Header Image love black art (2).png' />
+        </div>
     </div>
     <!--End Header Section-->
 
