--- a/home.html
+++ b/home.html
@@ -1,4 +1,4 @@
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en-GB">
+<html lang="en-GB">
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -8,10 +8,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="home.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-</head>
+</head>  
 
 <body>
     <!--Navbar Section-->
+    <div class="header-wrap">
     <header class="navbar">
         <div class="navbar-container">
             <div class="logo-container">
@@ -38,11 +39,22 @@
             </div>
         </div>
     </header>
+</div>
     <!--End Navbar Section-->
 
     <!--Header Section-->
     <div class="header-image-container">
-        <div class="header-image"></div>
+        <div class="header-image">
+            <div class="header-slide-1-callout-container">
+                <div class="slide-1-callout">
+                    Love Black Art
+                </div>
+                <div class="slide-1-callout-sub">
+                    Lorem ipsum dolor sit amen
+                </div>
+            </div>
+        </div>
+        
     </div>
     <!--End Header Section-->
 
@@ -56,7 +68,7 @@
                         <i class="far fa-star"></i>
                     </div>
                     <div class="wwd-copy">
-                        <div class="wwd-copy-header">Showcasing</div>
+                        <div class="wwd-copy-header">Neveah is really cool</div>
                         <div class="wwd-subjects-text">Lorem ipsum dolor sit amet, consectetur adi.</div>
                     </div>
                 </div>
@@ -106,7 +118,7 @@
                 </div>
             </div>
             <div class="founder-image-container">
-                <img src='/assets/images/pexels-teddy-tavan-4890733.jpg' height="476" width="370"></img>
+                <img src='/assets/images/pexels-teddy-tavan-4890733.jpg' height="90%" width="90%"></img>
             </div>
         </div>
     </div>
