--- a/home.html
+++ b/home.html
@@ -93,7 +93,6 @@
             </div>
         </div>
     </div>
-    <div class="wwd-line-separator body-width"></div>
     <!--End of What We Do-->
 
     <!--Meet our Founder-->
@@ -109,9 +108,6 @@
                     dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                     exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
                     reprehenderit in voluptate velit esse.
-                </div>
-                <div class="mof-line-separator-container">
-                    <div class="mof-line-separator"></div>
                 </div>
                 <div class="mof-button-container">
                     <button class="mof-button">Submit Your Art</button>
@@ -152,7 +148,22 @@
 
         <!--Blog 2-->
         <div class="bp-2-container body-width">
-            <div class="bp-1-copy-container">
+            <div class="bp-2-copy-container">
+                <div class="bp-date">February 3rd, 2021</div>
+                <div class="bp-copy-header">Featured Artist of the Month: Jon Doe</div>
+                <div class="bp-copy">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim
+                    veniam, quis nostrud exercitation ullamco labor...
+                </div>
+                <div class="read-more-2">
+                    <a src="#">Read More</a>
+                </div>
+            </div>            
+            <div class="blog-post-img-container">
+                <img src="assets/images/pexels-dazzle-jam-2710063-resize.jpg" height="300" width="450"></img>
+            </div>
+            <div class="bp-2-copy-container-mobile">
                 <div class="bp-date">February 3rd, 2021</div>
                 <div class="bp-copy-header">Featured Artist of the Month: Jon Doe</div>
                 <div class="bp-copy">
@@ -164,10 +175,8 @@
                     <a src="#">Read More</a>
                 </div>
             </div>
-            <div class="blog-post-img-container">
-                <img src="assets/images/pexels-dazzle-jam-2710063-resize.jpg" height="300" width="450"></img>
-            </div>
         </div>
+        
         <!--End Blog 2-->
     </div>
     <!--End Latest Blog Section-->
@@ -266,15 +275,15 @@
                 <div class="foot-contact-content">
                     <div class="foot-phone">
                         <i class="fas fa-phone-alt"></i>
-                        <div class="foot-phone-content">
+                        <a class="foot-phone-content" href="tel:+5-5551234567">
                             +5-555-123-4567
-                        </div>
+                        </a>
                     </div>
                     <div class="foot-email">
                         <i class="fas fa-envelope"></i>
-                        <div class="foot-email-content">
+                        <a class="foot-email-content" href="mailto:theartifactmedia@gmail.com">
                             theartifactmedia@gmail.com
-                        </div>
+                        </a>
                     </div>
                     <div class="foot-addy">
                         <i class="fas fa-map-marker-alt"></i>
