--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
                 <div class="nav-links-container">
                     <div class='nav-links'>
                         <a class="active" href="#home">Home</a>
-                        <a href="#about">About</a>
+                        <a href="/about.html">About</a>
                         <a href="#contact">Contact</a>
                         <a href="#blogs">Blogs</a>
                         <i class="fas fa-search"></i>
