Completed Contact us Page

--- a/contact-us.html
+++ b/contact-us.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="contactus.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
@@ -22,8 +22,8 @@
                     <div class="nav-links-container">
                         <div class='nav-links'>
                             <a href="/home.html">Home</a>
-                            <a class="active" href="/about.html">About</a>
-                            <a href="/contact-us.html">Contact</a>
+                            <a href="/about.html">About</a>
+                            <a class="active" href="/contact-us.html">Contact</a>
                             <a href="#blogs">Blogs</a>
                             <i class="fas fa-search"></i>
                         </div>
@@ -43,42 +43,73 @@
     <!--End Navbar Section-->
 
     <!--Header Section-->
-    <div class="header-image-container">            
-            <div class="header-overlay">
-                <div class="header-slide-1-callout-container">                
+    <div class="header-image-container">
+        <div class="header-overlay">
+            <div class="header-slide-1-callout-container">
                 <div class="callout-content-container">
                     <div class="slide-1-callout">
-                        About Us
+                        Contact Us
                     </div>
                     <div class="slide-1-callout-sub">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua.
-                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.
                     </div>
                 </div>
             </div>
-            </div>
-             
-                   
-    </div>    
+        </div>
+
+
+    </div>
     <!--End Header Section-->
 
     <!--Body Section-->
-    <div class="about-us-container">
-        <div class="au-content-container body-width">
-            <div class="au-img-container">
-                <img height="90%" width="90%" src="/assets/images/pexels-teddy-tavan-4890733.jpg">
-             </div>
-            <div class="au-copy-container">
-                <div class="au-copy-title">We Love Black Art!</div>
-                <div class="au-line-separator"></div>
-                <div class="au-sub-title">Lorem ipsum dolor sit</div>
-                <div class="au-copy">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et
-                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                    reprehenderit in voluptate velit esse.
+    <div class="contact-us-container">
+        <div class="cu-copy-title">Feel Free to Reach Out!</div>
+        <div class="cu-content-container body-width">
+            <div class="help-section-container">
+                <div class="help-section-title"> Ask how we can help:</div>
+                <div class="hs-content-container-1">
+                    <div class="hs-title-1">
+                        Lorem Ipsum Dolor
+                    </div>
+                    <div class="hs-content-1">
+                        Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                        irure dolor in reprehenderit in voluptate velit esse cillum dolore
+                    </div>
+                </div>
+                <div class="hs-content-container-2">
+                    <div class="hs-title-2">
+                        Nisi Ut Aliquip
+                    </div>
+                    <div class="hs-content-2">
+                        Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                        irure dolor in reprehenderit in voluptate velit esse cillum dolore
+                    </div>
+                </div>
+            </div>
+            <div class="cu-copy-container">
+                <div class="contact-form-container">
+                    <div class="contact-info-form-container">
+                        <div class="contact-header">
+                            Please note: All Fields are Required *
+                        </div>
+                        <div class="contact-form">
+                            <form action="/home.html">
+                                <div class="input-fields">
+                                    <input type="text" id="fname" name="firstname" placeholder="First Name">
+                                    <input type="text" id="email" name="email" placeholder="Email">
+                                    <input type="text" id="phone" name="phone" placeholder="Phone Number">
+
+                                </div>
+                                <textarea id="subject" name="subject" placeholder="Write something.."
+                                    style="height:100px"></textarea>
+
+                                <div class="button-container">
+                                    <input type="submit" value="Send">
+                                </div>
+                            </form>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
