--- a/home.html
+++ b/home.html
@@ -1,5 +1,4 @@
 <html lang="en-GB">
-
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>Love Black Art</title>
@@ -23,7 +22,7 @@
                     <div class='nav-links'>
                         <a class="active" href="#home">Home</a>
                         <a href="/about.html">About</a>
-                        <a href="#contact">Contact</a>
+                        <a href="/contact-us.html">Contact</a>
                         <a href="#blogs">Blogs</a>
                         <i class="fas fa-search"></i>
                     </div>
