Updated contact page

--- a/contact-us.html
+++ b/contact-us.html
@@ -96,9 +96,9 @@
                         <div class="contact-form">
                             <form action="/home.html">
                                 <div class="input-fields">
-                                    <input type="text" id="fname" name="firstname" placeholder="First Name">
-                                    <input type="text" id="email" name="email" placeholder="Email">
-                                    <input type="text" id="phone" name="phone" placeholder="Phone Number">
+                                    <input required type="text" id="fname" name="firstname" placeholder="First Name">
+                                    <input required type="text" id="email" name="email" placeholder="Email">
+                                    <input required type="text" id="phone" name="phone" placeholder="Phone Number">
 
                                 </div>
                                 <textarea id="subject" name="subject" placeholder="Write something.."
