Updated css property name

--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
             <div class="logo-container">
                 <img src="assets/images/Artifact badge no background.png" height="62px" width="70px;">
             </div>
-            <div class="section-one-container">
+            <div class="main-nav-section">
                 <div class="nav-links-container">
                     <div class='nav-links'>
                         <a class="active" href="#home">Home</a>
@@ -67,7 +67,7 @@
                         <i class="far fa-star"></i>
                     </div>
                     <div class="wwd-copy">
-                        <div class="wwd-copy-header">Neveah is really cool</div>
+                        <div class="wwd-copy-header">Lorem ipsum dolor</div>
                         <div class="wwd-subjects-text">Lorem ipsum dolor sit amet, consectetur adi.</div>
                     </div>
                 </div>
