--- a/contact-us.html
+++ b/contact-us.html
@@ -18,7 +18,7 @@
                 <div class="logo-container">
                     <img src="assets/images/Artifact badge no background.png" height="62px" width="70px;">
                 </div>
-                <div class="section-one-container">
+                <div class="main-nav-section">
                     <div class="nav-links-container">
                         <div class='nav-links'>
                             <a href="/home.html">Home</a>
